refactor, add key sequence gesture action

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,16 @@ set(kwin_gestures_SOURCES
     gestureseffect.cpp
     inputfilter.cpp
     main.cpp
-    gesturerecognizer.cpp
-    config/gesture.cpp
+    virtualkeyboard.cpp
     config/config.cpp
+    gesturerecognizer.cpp
+    gestures/gesture.cpp
+    gestures/pinchgesture.cpp
+    gestures/swipegesture.cpp
+    gestures/actions/action.cpp
+    gestures/actions/command.cpp
+    gestures/actions/globalshortcut.cpp
+    gestures/actions/keysequence.cpp
 )
 
 add_library(kwin_gestures MODULE ${kwin_gestures_SOURCES})
