--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,11 +5,13 @@ set(kwin_gestures_SOURCES
     virtualkeyboard.cpp
     config/config.cpp
     gesturerecognizer.cpp
+    gestures/condition.cpp
     gestures/gesture.cpp
     gestures/holdgesture.cpp
     gestures/pinchgesture.cpp
     gestures/swipegesture.cpp
-        gestures/actions/command.cpp
+    gestures/actions/action.cpp
+    gestures/actions/command.cpp
     gestures/actions/globalshortcut.cpp
     gestures/actions/keysequence.cpp
 )
