extract non kwin-dependent code into libgestures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,13 +25,20 @@ include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 
 find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS
+    Core
+    DBus
     Widgets
 )
 
-include_directories(${Qt6Widgets_INCLUDE_DIRS})
-add_definitions(${Qt6Widgets_DEFINITIONS})
+find_package(KWin REQUIRED COMPONENTS
+    kwineffects
+)
 
-find_package(Qt6Test ${QT_MIN_VERSION} CONFIG QUIET)
+if(${KWin_VERSION} VERSION_GREATER_EQUAL 6.1.90)
+    add_compile_definitions(KWIN_6_2_OR_GREATER)
+endif()
+
+find_package(Qt6Test ${QT_MIN_VERSION} REQUIRED)
 set_package_properties(Qt6Test PROPERTIES
     PURPOSE "Required for tests"
     TYPE OPTIONAL
@@ -41,17 +48,8 @@ if (NOT Qt6Test_FOUND)
     set(BUILD_TESTS OFF CACHE BOOL "Build the testing tree.")
 endif()
 if (BUILD_TESTS)
-    include(ECMAddTests)
     enable_testing()
     add_subdirectory(tests)
-endif()
-
-find_package(KWin REQUIRED COMPONENTS
-    kwineffects
-)
-
-if(${KWin_VERSION} VERSION_GREATER_EQUAL 6.1.90)
-    add_compile_definitions(KWIN_6_2_OR_GREATER)
 endif()
 
 add_subdirectory(src)
