--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
         run: cmake --build ${{github.workspace}}/build
 
       - name: Run tests
-        run: ${{github.workspace}}/build/tests/testGestureRecognizerHold
+        run: ctest --test-dir ${{github.workspace}}/build --output-on-failure
