--- a/src/kwin/CMakeLists.txt
+++ b/src/kwin/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(kwin_gestures_SOURCES
     config/config.cpp
-    impl/kwinvirtualinputdevice.cpp
-    impl/kwinwindowdataprovider.cpp
+        impl/kwininput.cpp
+    impl/kwinwindowinfoprovider.cpp
     effect.cpp
     inputfilter.cpp
     main.cpp
