--- a/tests/libgestures/gestures/CMakeLists.txt
+++ b/tests/libgestures/gestures/CMakeLists.txt
@@ -1,3 +1,14 @@
+set(testGesture_SRCS
+    test_gesture.cpp
+)
+qt_add_executable(testGesture ${testGesture_SRCS})
+add_test(NAME "gesture" COMMAND testGesture)
+target_link_libraries(testGesture PRIVATE
+    libgestures
+    Qt::Core
+    Qt::Test
+)
+
 set(testGestureRecognizerHold_SRCS
     test_gesturerecognizer_hold.cpp
     test_gesturerecognizer_shared.cpp
