libgestures/gesturerecognizer: reduce code duplication, add tests

--- a/tests/libgestures/gestures/CMakeLists.txt
+++ b/tests/libgestures/gestures/CMakeLists.txt
@@ -9,13 +9,12 @@ target_link_libraries(testGesture PRIVATE
     Qt::Test
 )
 
-set(testGestureRecognizerHold_SRCS
-    test_gesturerecognizer_hold.cpp
-    test_gesturerecognizer_shared.cpp
+set(testGestureRecognizer_SRCS
+    test_gesturerecognizer.cpp
 )
-qt_add_executable(testGestureRecognizerHold ${testGestureRecognizerHold_SRCS})
-add_test(NAME "gesturerecognizer_hold" COMMAND testGestureRecognizerHold)
-target_link_libraries(testGestureRecognizerHold PRIVATE
+qt_add_executable(testGestureRecognizer ${testGestureRecognizer_SRCS})
+add_test(NAME "gesturerecognizer" COMMAND testGestureRecognizer)
+target_link_libraries(testGestureRecognizer PRIVATE
     libgestures
     Qt::Core
     Qt::Test
