--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=ON
+        run: cmake -B ${{github.workspace}}/build -DBUILD_KWIN_EFFECT=OFF -DBUILD_TESTS=ON
 
       - name: Build
         run: cmake --build ${{github.workspace}}/build
