--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         run: pacman -Syu --noconfirm
 
       - name: Install dependencies
-        run: pacman -S --noconfirm base-devel git extra-cmake-modules qt6-tools kwin
+        run: pacman -S --needed --noconfirm base-devel git extra-cmake-modules qt6-tools kwin
 
       - name: Check out repository
         uses: actions/checkout@v4
