--- a/src/kwin/CMakeLists.txt
+++ b/src/kwin/CMakeLists.txt
@@ -6,14 +6,11 @@ find_package(KWin REQUIRED COMPONENTS
     kwineffects
 )
 
-find_package(yaml-cpp REQUIRED)
-
 if(${KWin_VERSION} VERSION_GREATER_EQUAL 6.1.90)
     add_compile_definitions(KWIN_6_2_OR_GREATER)
 endif()
 
 set(kwin_gestures_SOURCES
-    config/config.cpp
     impl/kwininput.cpp
     impl/kwinwindowinfoprovider.cpp
     effect.cpp
@@ -26,7 +23,7 @@ target_link_libraries(kwin_gestures PRIVATE
     KWin::kwin
     libgestures
     Qt6::Widgets
-    yaml-cpp
 )
+target_compile_options(kwin_gestures PUBLIC -fexceptions)
 
 install(TARGETS kwin_gestures DESTINATION ${KDE_INSTALL_PLUGINDIR}/kwin/effects/plugins)
