kwin: link to xkb

--- a/src/kwin/CMakeLists.txt
+++ b/src/kwin/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(KWin REQUIRED COMPONENTS
     kwineffects
 )
 
+find_package(XKB REQUIRED)
+
 if(${KWin_VERSION} VERSION_GREATER_EQUAL 6.1.90)
     add_compile_definitions(KWIN_6_2_OR_GREATER)
 endif()
@@ -25,6 +27,7 @@ target_link_libraries(kwin_gestures PRIVATE
     KWin::kwin
     libgestures
     Qt6::Widgets
+    XKB::XKB
 )
 target_compile_options(kwin_gestures PUBLIC -fexceptions)
 
