--- a/.github/workflows/debian-experimental.yml
+++ b/.github/workflows/debian-experimental.yml
@@ -28,7 +28,7 @@ jobs:
         run: apt-get upgrade -y
 
       - name: Install Dependencies
-        run: apt-get install -y -f git cmake g++ extra-cmake-modules qt6-tools-dev kwin-wayland kwin-dev libkf6configwidgets-dev gettext libkf6crash-dev libkf6globalaccel-dev libkf6kio-dev libkf6service-dev libkf6notifications-dev libkf6kcmutils-dev libkdecorations2-dev libyaml-cpp-dev
+        run: apt-get install -y -f cmake g++ extra-cmake-modules qt6-tools-dev kwin-wayland kwin-dev libkf6configwidgets-dev gettext libkf6kcmutils-dev libyaml-cpp-dev libxkbcommon-dev
 
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build
