libgestures: implement rotate gesture

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ set(libgestures_SRCS
     libgestures/libgestures/gestures/gesturerecognizer.cpp
     libgestures/libgestures/gestures/holdgesture.h
     libgestures/libgestures/gestures/pinchgesture.cpp
+    libgestures/libgestures/gestures/rotategesture.cpp
     libgestures/libgestures/gestures/swipegesture.cpp
     libgestures/libgestures/condition.cpp
     libgestures/libgestures/input.cpp
