tests/(directional)motiontrigger: create

--- a/tests/libgestures/CMakeLists.txt
+++ b/tests/libgestures/CMakeLists.txt
@@ -19,4 +19,6 @@ endmacro()
 libgestures_add_test(action SOURCES actions/test_action.cpp)
 libgestures_add_test(actioninterval SOURCES actions/test_actioninterval.cpp)
 libgestures_add_test(conditiongroup SOURCES conditions/test_conditiongroup.cpp)
+libgestures_add_test(directionalmotiontrigger SOURCES triggers/test_directionalmotiontrigger.cpp)
+libgestures_add_test(motiontrigger SOURCES triggers/test_motiontrigger.cpp)
 libgestures_add_test(trigger SOURCES triggers/test_trigger.cpp)
