libgestures: move src/libgestures/libgestures to src/libgestures
The nested directory existed because of my poor knowledge of CMake. I couldn't get imports to work.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,28 +1,28 @@
 set(libgestures_SRCS
-    libgestures/libgestures/actions/action.cpp
-    libgestures/libgestures/actions/actiongroup.cpp
-    libgestures/libgestures/actions/command.cpp
-    libgestures/libgestures/actions/plasmaglobalshortcut.cpp
-    libgestures/libgestures/actions/input.cpp
-    libgestures/libgestures/actions/oneactiongroup.cpp
-    libgestures/libgestures/conditions/callbackcondition.cpp
-    libgestures/libgestures/conditions/condition.cpp
-    libgestures/libgestures/conditions/conditiongroup.cpp
-    libgestures/libgestures/conditions/legacycondition.cpp
-    libgestures/libgestures/handlers/motiontriggerhandler.cpp
-    libgestures/libgestures/handlers/mousetriggerhandler.cpp
-    libgestures/libgestures/handlers/multitouchmotiontriggerhandler.cpp
-    libgestures/libgestures/handlers/touchpadtriggerhandler.cpp
-    libgestures/libgestures/handlers/triggerhandler.cpp
-    libgestures/libgestures/triggers/directionalmotiontrigger.cpp
-    libgestures/libgestures/triggers/motiontrigger.cpp
-    libgestures/libgestures/triggers/presstrigger.cpp
-    libgestures/libgestures/triggers/stroketrigger.cpp
-    libgestures/libgestures/triggers/trigger.cpp
-    libgestures/libgestures/globals.h
-    libgestures/libgestures/input.cpp
-    libgestures/libgestures/range.cpp
-    libgestures/libgestures/windowinfoprovider.cpp
+    libgestures/actions/action.cpp
+    libgestures/actions/actiongroup.cpp
+    libgestures/actions/command.cpp
+    libgestures/actions/plasmaglobalshortcut.cpp
+    libgestures/actions/input.cpp
+    libgestures/actions/oneactiongroup.cpp
+    libgestures/conditions/callbackcondition.cpp
+    libgestures/conditions/condition.cpp
+    libgestures/conditions/conditiongroup.cpp
+    libgestures/conditions/legacycondition.cpp
+    libgestures/handlers/motiontriggerhandler.cpp
+    libgestures/handlers/mousetriggerhandler.cpp
+    libgestures/handlers/multitouchmotiontriggerhandler.cpp
+    libgestures/handlers/touchpadtriggerhandler.cpp
+    libgestures/handlers/triggerhandler.cpp
+    libgestures/triggers/directionalmotiontrigger.cpp
+    libgestures/triggers/motiontrigger.cpp
+    libgestures/triggers/presstrigger.cpp
+    libgestures/triggers/stroketrigger.cpp
+    libgestures/triggers/trigger.cpp
+    libgestures/globals.h
+    libgestures/input.cpp
+    libgestures/range.cpp
+    libgestures/windowinfoprovider.cpp
 )
 
 add_library(libgestures STATIC ${libgestures_SRCS})
@@ -31,12 +31,11 @@ target_link_libraries(libgestures PRIVATE
     Qt6::DBus
 )
 target_compile_definitions(libgestures PUBLIC TEST_VIRTUAL=$<IF:$<BOOL:${BUILD_TESTS}>,virtual,>)
+target_include_directories(libgestures PUBLIC libgestures)
 
 find_package(yaml-cpp REQUIRED)
 target_link_libraries(libgestures PRIVATE yaml-cpp)
 target_compile_options(libgestures PUBLIC -fexceptions -fPIC)
-
-target_include_directories(libgestures PUBLIC libgestures)
 
 if (BUILD_KWIN_EFFECT)
     add_subdirectory(kwin)
