tests/range: create

--- a/tests/libinputactions/CMakeLists.txt
+++ b/tests/libinputactions/CMakeLists.txt
@@ -21,5 +21,6 @@ libinputactions_add_test(actioninterval SOURCES actions/test_actioninterval.cpp)
 libinputactions_add_test(conditiongroup SOURCES conditions/test_conditiongroup.cpp)
 libinputactions_add_test(directionalmotiontrigger SOURCES triggers/test_directionalmotiontrigger.cpp)
 libinputactions_add_test(motiontrigger SOURCES triggers/test_motiontrigger.cpp)
+libinputactions_add_test(range SOURCES test_range.cpp)
 libinputactions_add_test(trigger SOURCES triggers/test_trigger.cpp)
 libinputactions_add_test(triggerhandler SOURCES handlers/test_triggerhandler.cpp)
